# ChangeLog for dev-perl/XML-LibXML
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.122 2012/02/24 15:04:42 phajdan.jr Exp $

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  XML-LibXML-1.900.0.ebuild:
  x86 stable wrt bug #404343

*XML-LibXML-1.910.0 (21 Feb 2012)

  21 Feb 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.910.0.ebuild:
  Version bump

  19 Feb 2012; Agostino Sarubbo <ago@gentoo.org> XML-LibXML-1.900.0.ebuild:
  Stable for amd64, wrt bug #404343

  18 Feb 2012; Jeroen Roovers <jer@gentoo.org> XML-LibXML-1.900.0.ebuild:
  Stable for HPPA (bug #404343).

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.870.0.ebuild,
  -XML-LibXML-1.880.0.ebuild, -XML-LibXML-1.890.0.ebuild:
  Cleanup

*XML-LibXML-1.900.0 (09 Jan 2012)

  09 Jan 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.900.0.ebuild:
  Version bump

*XML-LibXML-1.890.0 (25 Dec 2011)

  25 Dec 2011; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.890.0.ebuild:
  Version bump

*XML-LibXML-1.880.0 (24 Sep 2011)

  24 Sep 2011; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.880.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.840.0.ebuild:
  Cleanup

*XML-LibXML-1.870.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.870.0.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.720.0.ebuild,
  -XML-LibXML-1.730.0.ebuild, -XML-LibXML-1.750.0.ebuild,
  -XML-LibXML-1.770.0.ebuild, -XML-LibXML-1.790.0.ebuild,
  -XML-LibXML-1.800.0.ebuild, -XML-LibXML-1.810.0.ebuild,
  -XML-LibXML-1.820.0.ebuild:
  Cleanup

*XML-LibXML-1.840.0 (25 Jul 2011)

  25 Jul 2011; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.840.0.ebuild:
  Version bump

*XML-LibXML-1.820.0 (21 Jul 2011)

  21 Jul 2011; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.820.0.ebuild:
  Version bump

*XML-LibXML-1.810.0 (18 Jul 2011)
