@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST XML-LibXML-1.70.tar.gz 339682 RMD160 cc9cc88a10e6652ec9cedd7904ef84dc057170e3 SHA1 c3400e61282e08e84ab16d5d8cc4557aa5bf3984 SHA256 53e6cf06772ba9d85055dc6e4488dbd876d2376e48ef3578fa73246ee98b3ba0
 DIST XML-LibXML-1.90.tar.gz 434964 RMD160 5486ca71522bca91421745662b4d64e1dc462dc3 SHA1 c341d23017fea980d7802274aa28ae30da35ea18 SHA256 e2fc57afda9d9fc756269c1f74de53b4d5a5c4840bf9a4dc5b6e2534082fa6c8
 DIST XML-LibXML-1.91.tar.gz 439841 RMD160 e0e3dcc82602adba835f92f7b0d0324756dc5e98 SHA1 2ebd598f73db1569e19ae256c85de94003b8895a SHA256 117e015e405a9fc387081f5d12a2eec8ae0a728d7ffc130098f3cf45fe911acf
+DIST XML-LibXML-1.93.tar.gz 440520 RMD160 d5d56fa819cbab95e2c07a129d3231bd8ace1ba6 SHA1 30ce8d4368277aa5ad86e0f4722718df26bbac3f SHA256 77bddfccd556dc28be2767ca01230b6148d9141761525561da0f292ff2273eda
 EBUILD XML-LibXML-1.70.ebuild 1833 RMD160 0b5f414d25cdda19921a479a4da45ffe517ace27 SHA1 b98612316743b08a5c91d0f5164701806e9040dd SHA256 9c1969b92e51c2ff9692961509846843f4947f68be5894d12bf60874815da1d0
 EBUILD XML-LibXML-1.900.0.ebuild 1805 RMD160 54b50837d9796e7b0353261d9c922613e21bd79b SHA1 a5d9ce9967a5df0e5e501839957348d882ce614b SHA256 c12207a0a627a4379c0c474c722e44c36a639e8b14f431e087d571fb19f1f58c
 EBUILD XML-LibXML-1.910.0.ebuild 1759 RMD160 b86c672e37c4e05d4c7b2e4ab8a26d928339915c SHA1 c0079e00c8b225a4862227b9228eca6f060c3c97 SHA256 1c840fd401affc87367f7e470e90709770c850087f65d82a879774be569fa4f9
-MISC ChangeLog 15102 RMD160 92df42079367ccaeaf2c9e1fe56d5e5d265871ee SHA1 5e2a52f9ed5ed27af363e00c92784687a653901a SHA256 171cb41735edb75edc2d00d84091e563195d4220385d8391e1421d59ee94b723
+EBUILD XML-LibXML-1.930.0.ebuild 1759 RMD160 9c58a01df54ab76440749884e294a0eda034a7ad SHA1 a378bc3a7638b8c28845ab276a87cf38eabef4ef SHA256 d0a07a13af6843b8d26c1f3062b0963309356b7fccade38dc0c897a55b5a74c4
+MISC ChangeLog 15223 RMD160 91e81c509fa641d0060dca3773d85d1192500b04 SHA1 7e6acb484f57b34ff953a18a927557ce8fc2a698 SHA256 6a7454d452993846fb5c59dd6347c6fdc47f28ba23c60727fdaf57a6001677b2
 MISC metadata.xml 236 RMD160 d24c561015f69ed43e1aa83004e393444bd03fe2 SHA1 5fcccfaad4670f1678e293b39bbc08537e728415 SHA256 7abc5970d827a8edf87e0c6a98659bf04542bb1236c3a906bfe3c53b90a1cdc2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREKAAYFAk9HpxAACgkQuUQtlDBCeQLfzQCfWoI0wFY37rK7UsAjf6ZmUpvO
-ZlYAn2oiH2ziiWzLOtGQlKGOqdT0PhbM
-=SAVE
+iEYEAREIAAYFAk9M5lAACgkQV3J2n04EauwLTgCgk9exA+nE6fPS0+90sUylWC3O
+fKsAniH9AlK7RyZkLkPIxRW4YcmyHbWM
+=GPDG
 -----END PGP SIGNATURE-----
