@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-LibXML
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.122 2012/02/24 15:04:42 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.123 2012/02/28 14:35:55 tove Exp $
+
+*XML-LibXML-1.930.0 (28 Feb 2012)
+
+  28 Feb 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.930.0.ebuild:
+  Version bump
 
   24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   XML-LibXML-1.900.0.ebuild:
